// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note should render correctly 1`] = `
"<div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>note<style>
        .note {
          padding: 8pt 16pt;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #eaeaea;
          color: #000;
          background-color: #fff;
          border-radius: 5px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4pt;
        }
      </style></div>"
`;

exports[`Note should work with different styles 1`] = `
"<div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>secondary<style>
        .note {
          padding: calc(8pt / 2) calc(16pt / 2);
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #666;
          color: #666;
          background-color: #fff;
          border-radius: 5px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4pt;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>success<style>
        .note {
          padding: 8pt 16pt;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #0070f3;
          color: white;
          background-color: #0070f3;
          border-radius: 5px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4pt;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>warning<style>
        .note {
          padding: 8pt 16pt;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #000;
          color: #fff;
          background-color: #000;
          border-radius: 5px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4pt;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>error<style>
        .note {
          padding: calc(8pt / 2) calc(16pt / 2);
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #000;
          color: #fff;
          background-color: #000;
          border-radius: 5px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4pt;
        }
      </style></div></div>"
`;

exports[`Note should work with different types 1`] = `
"<div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>secondary<style>
        .note {
          padding: 8pt 16pt;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #666;
          color: #666;
          background-color: #fff;
          border-radius: 5px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4pt;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>success<style>
        .note {
          padding: 8pt 16pt;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #0070f3;
          color: #0070f3;
          background-color: #fff;
          border-radius: 5px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4pt;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>warning<style>
        .note {
          padding: 8pt 16pt;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #f5a623;
          color: #f5a623;
          background-color: #fff;
          border-radius: 5px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4pt;
        }
      </style></div><div class=\\"note \\"><span class=\\"label\\"><b>note:</b></span>error<style>
        .note {
          padding: 8pt 16pt;
          font-size: 14px;
          line-height: 1.8;
          border: 1px solid #e00;
          color: #e00;
          background-color: #fff;
          border-radius: 5px;
        }

        .note :global(p) {
          margin: 0;
        }

        .label {
          text-transform: uppercase;
          user-select: none;
          line-height: 1.5;
          padding-right: 4pt;
        }
      </style></div></div>"
`;
